--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <body>
 
 <h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<p>This is a another paragraph.</p>
+<p>This is a another paragraph.</p>
 
 </body>
 </html>
